--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,7 +1,25 @@
 {% extends "auctions/layout.html" %}
-
 {% block body %}
-    <h2>Active Listings</h2>
+<h2>Active Listings</h2>
 
-    TODO
+<div class="container">
+     <div class="row">
+          <div class="card-deck">
+               {% for listing in listings %}
+               <div class="card"
+                    style="width: 18rem;">
+                    <h5 class="card-header">{{listing.title}}</h5>
+                    <img class="card-img-top"
+                         src="{{listing.image_url}}"
+                         alt="Card image cap">
+                    <div class="card-body">
+                         <p class="card-text">{{listing.description}}</p>
+                         <a href="#"
+                            class="btn btn-primary">Go somewhere</a>
+                    </div>
+               </div>
+               {% endfor %}
+          </div>
+     </div>
+</div>
 {% endblock %}
