--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -30,6 +30,10 @@
         {% if user.is_authenticated %}
         <li class="nav-item">
             <a class="nav-link"
+               href="{% url 'auctions:create' %}">Create</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link"
                href="{% url 'auctions:logout' %}">Log Out</a>
         </li>
         {% else %}
