--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,25 +1,28 @@
 {% extends "auctions/layout.html" %}
 {% block body %}
+<!-- title, description, current price, and photo -->
 <h2>Active Listings</h2>
+<!-- <div class="container"> -->
+<!-- <div class="row"> -->
 
-<div class="container">
-     <div class="row">
-          <div class="card-deck">
-               {% for listing in listings %}
-               <div class="card"
-                    style="width: 18rem;">
-                    <h5 class="card-header">{{listing.title}}</h5>
-                    <img class="card-img-top"
-                         src="{{listing.image_url}}"
-                         alt="Card image cap">
-                    <div class="card-body">
-                         <p class="card-text">{{listing.description}}</p>
-                         <a href="#"
-                            class="btn btn-primary">Go somewhere</a>
-                    </div>
+<div class="card-columns">
+     {% for listing in listings %}
+     <div class="card"
+          style="width: 18rem;">
+          <a href="{% url 'auctions:listing' listing.pk %}"
+             class="btn btn-primary">
+               <h5 class="card-header text-left">{{listing.title}}</h5>
+               <img class="card-img-top"
+                    src="{{listing.image_url}}"
+                    alt="Card image cap">
+               <div class="card-body">
+                    <h2 class="card-text text-right">{{listing.price}}€</h2>
+                    <p class="card-text text-left">{{listing.description}}</p>
                </div>
-               {% endfor %}
-          </div>
+          </a>
      </div>
+     {% endfor %}
 </div>
+<!-- </div> -->
+<!-- </div> -->
 {% endblock %}
