continued work on listing page

--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -7,3 +7,11 @@ form {
     flex-direction: column;
     width: 25%;
 }
+
+img {
+    width: 65%;
+}
+
+button.btn.btn-primary {
+    vertical-align: top;
+}
