--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -10,7 +10,7 @@
      <div class="card"
           style="width: 18rem;">
           <a href="{% url 'auctions:listing' listing.pk %}"
-             class="btn btn-primary">
+             class="btn">
                <h5 class="card-header text-left">{{listing.title}}</h5>
                <img class="card-img-top"
                     src="{{listing.image_url}}"
