--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -1,64 +1,113 @@
 {% extends "auctions/layout.html" %}
 {% block body %}
 <div class="container-fluid">
-    <h2>{{listing.title}}</h2>
-    <p class="card-text">
-        <small class="text-muted">{{listing.get_category_display}}</small> |
-        <small class="text-muted">Starting bid: {{listing.starting_bid}}€</small> |
-        <small class="text-muted">
-            {% if listing.active %}
-            Active
-            {% else %}
-            Closed
-            {% endif %}
-        </small>
-    </p>
     <div class="row">
-        <div class="col-sm">
-            {% if request.user.is_authenticated %}
-            <form action="{% url 'auctions:listing' listing.pk %}"
+        <div class="col-sm listing">
+            <div class="listing-info">
+                <img src="{{listing.image_url}}"
+                     alt="Image for {{listing.title}}">
+                <p class="mt-3 mb-0 bold">Description:</p>
+                <p>{{listing.description}}</p>
+            </div>
+            {% if request.user.is_authenticated and listing.active %}
+            <form class="watch-button-form"
+                  action="{% url 'auctions:listing' listing.pk %}"
                   method="post">
                 {% csrf_token %}
-
                 {% if is_watched %}
                 <button class="watch-button"
                         type="submit"
                         value=watch
-                        name=watch><i class="fa fa-star-o"></i></button>
+                        name=watch><i class="fa fa-star"></i></button>
                 {% else %}
                 <button class="watch-button"
                         type="submit"
                         value=watch
-                        name=watch><i class="fa fa-star"></i></button>
+                        name=watch><i class="fa fa-star-o"></i></button>
                 {% endif %}
-            </form> {% endif %}
-            <img src="{{listing.image_url}}"
-                 alt="Image for {{listing.title}}">
+            </form>
+            {% endif %}
         </div>
         <div class="col-sm">
-            <h2>{{listing.price}}€</h2>
-            <p>Description: {{listing.description}}</p>
-            <div>
-                <h3>Comments</h3>
-                {% for comment in comments %}
-                <p>{{ comment.user }}: {{ comment.content }}</p>
-                {% empty %}
-                <p>No comments yet.</p>
-                {% endfor %}
+            <h2>{{listing.title}}</h2>
+            <p class="card-text">
+                <small class="text-muted">{{listing.get_category_display}}</small> |
+                <small class="text-muted">Starting bid: {{listing.starting_bid}}€</small> |
+                <small class="text-muted">
+                    {% if listing.active %}
+                    Active
+                    {% else %}
+                    Closed
+                    {% endif %}
+                </small>
+            </p>
+            <div class="bid">
+                <h3>Current price:</h3>
+                <h2 class="price">{{listing.price}}€</h2>
             </div>
-        </div>
-        <div class="col-sm">
-            {% if request.user.is_authenticated %}
+            {% if request.user.is_authenticated and listing.active %}
             <form action="{% url 'auctions:listing' listing.pk %}"
                   method="post">
                 {% csrf_token %}
+                <div class="input-group">
+                    <input class="form-control"
+                           type="number"
+                           name="bid"
+                           placeholder="Bid">
+                    <span class="input-group-prepend">
+                        <input type="submit"
+                               class="btn btn-primary" />
+                    </span>
+                </div>
+            </form>
 
-                <input type="number"
-                       name="bid"
-                       placeholder="Bid">
-                <input type="submit"
-                       class="btn btn-warning" />
+            {% endif %}
+            {% if messages %}
+            <ul class="mt-10">
+                {% for message in messages %}
+                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR and message.extra_tags == 'bid' %}
+                <li class="error">{{ message }}</li>
                 {% endif %}
+                {% endfor %}
+            </ul>
+            {% endif %}
+        </div>
+        <div class="col-sm">
+            <div class="mt-90">
+                <h3>Comments</h3>
+                {% if request.user.is_authenticated and listing.active %}
+                <form action="{% url 'auctions:listing' listing.pk %}"
+                      method="post">
+                    {% csrf_token %}
+                    <div class="input-group add-comment-form">
+                        <input class="form-control"
+                               type="text"
+                               name="comment"
+                               placeholder="Add comment">
+                        <span class="input-group-prepend">
+                            <input type="submit"
+                                   class="btn btn-primary" />
+                        </span>
+                    </div>
+                    {% endif %}
+                    {% if messages %}
+                    <ul class="mt-10">
+                        {% for message in messages %}
+                        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR and message.extra_tags == 'comment' %}
+                        <li class="error">{{ message }}</li>
+                        {% endif %}
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                    <div class="mt-3">
+                        {% for comment in comments %}
+                        <p><span class="bold">{{ comment.user }}:</span> {{ comment.content }}</p>
+                        {% empty %}
+                        <p>No comments yet.</p>
+                        {% endfor %}
+                    </div>
+            </div>
+
         </div>
     </div>
 </div>
