--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -8,37 +8,38 @@
 <div>{{ message }}</div>
 {% endif %}
 
-<form action="{% url 'auctions:register' %}"
+<form class="register-form"
+      action="{% url 'auctions:register' %}"
       method="post">
-    {% csrf_token %}
-    <div class="form-group">
-        <input class="form-control"
-               autofocus
-               type="text"
-               name="username"
-               placeholder="Username">
-    </div>
-    <div class="form-group">
-        <input class="form-control"
-               type="email"
-               name="email"
-               placeholder="Email Address">
-    </div>
-    <div class="form-group">
-        <input class="form-control"
-               type="password"
-               name="password"
-               placeholder="Password">
-    </div>
-    <div class="form-group">
-        <input class="form-control"
-               type="password"
-               name="confirmation"
-               placeholder="Confirm Password">
-    </div>
-    <input class="btn btn-primary"
-           type="submit"
-           value="Register">
+       {% csrf_token %}
+       <div class="form-group">
+              <input class="form-control"
+                     autofocus
+                     type="text"
+                     name="username"
+                     placeholder="Username">
+       </div>
+       <div class="form-group">
+              <input class="form-control"
+                     type="email"
+                     name="email"
+                     placeholder="Email Address">
+       </div>
+       <div class="form-group">
+              <input class="form-control"
+                     type="password"
+                     name="password"
+                     placeholder="Password">
+       </div>
+       <div class="form-group">
+              <input class="form-control"
+                     type="password"
+                     name="confirmation"
+                     placeholder="Confirm Password">
+       </div>
+       <input class="btn btn-primary"
+              type="submit"
+              value="Register">
 </form>
 
 Already have an account? <a href="{% url 'auctions:login' %}">Log In here.</a>
