--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -30,15 +30,33 @@ Create Listing
   </div>
 
   <div class="form-group">
+    <label for="starting-bid">Starting bid</label>
+    <input class="form-control"
+           type="number"
+           name="starting-bid"
+           id="starting-bid">
+  </div>
+
+  <div class="form-group">
+    <label for="url">URL</label>
+    <input class="form-control"
+           type="url"
+           name="url"
+           id="url">
+  </div>
+
+  <div class="form-group">
     <label for="category">Category</label>
     <select class="form-control"
             name="category"
             id="category">
-      {% for category in categories %}
+      {% for n, category in categories %}
       <option value="{{category}}">{{category}}</option>
       {% endfor %}
     </select>
   </div>
+  <button class="btn btn-primary"
+          type="submit">Submit form</button>
 
 </form>
 
