--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -32,7 +32,15 @@
         {% if user.is_authenticated %}
         <li class="nav-item">
             <a class="nav-link"
+               href="{% url 'auctions:watchlist' %}">Watchlist</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link"
                href="{% url 'auctions:create' %}">Create</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link"
+               href="{% url 'auctions:categories' %}">Categories</a>
         </li>
         <li class="nav-item">
             <a class="nav-link"
