--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -31,15 +31,21 @@
         <div class="col-sm">
             <h2>{{listing.title}}</h2>
             <p class="card-text">
-                <small class="text-muted">{{listing}}</small> |
                 <small class="text-muted">Starting bid: {{listing.starting_bid}}€</small> |
                 {% if listing.active %}
-                <small class="bold text-primary">Active</small>
+                <small class="bold text-primary">Active</small> |
                 {% else %}
-                <small class="bold text-danger">Closed</small>
+                <small class="bold text-danger">Closed</small> |
                 {% endif %}
-                </small>
+                {% if not listing.active %}
+                {% if not winner == user %}
+                <small class="text-secondary"><span class="text-info">You</span> are the winner!</small>
+                {% else %}
+                <small class="text-secondary">The winner is <span class="text-info">{{winner.user}}!</span></small>
+                {% endif %}
+                {% endif %}
             </p>
+
             <div class="bid">
                 <h3>Current price:</h3>
                 <h2 class="text-success bold">{{listing.price}}€</h2>
