--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .watch-button-form {
-    right: 20%;
+    right: 40px;
     position: absolute;
 }
 
@@ -98,4 +98,13 @@ ul {
 .winner {
     display: flex;
     justify-content: space-between;
+}
+
+.card-columns {
+    column-count: 4
+}
+
+.comment-section {
+    position: absolute;
+    top: 45px;
 }
