--- a/auctions/templates/auctions/category.html
+++ b/auctions/templates/auctions/category.html
@@ -14,7 +14,7 @@
                  src="{{listing.image_url}}"
                  alt="Card image cap">
             <div class="card-body">
-                <h2 class="card-text text-right">{{listing.price}}€</h2>
+                <h2 class="card-text text-right text-success bold">{{listing.price}}€</h2>
                 <p class="card-text text-left">{{listing.description}}</p>
             </div>
         </a>
